# iconv-gui

./: .buildconfig  meson.build  org.gnome.Iconv-Gui.json
data/: meson.build  org.gnome.Iconv-Gui.appdata.xml.in  org.gnome.Iconv-Gui.desktop.in  org.gnome.Iconv-Gui.gschema.xml
po/: POTFILES  meson.build
src/: iconv-gui.gresource.xml  main.vala  meson.build  window.ui  window.vala
